--- a/Q_BAI/Q_UGapEb_20arms-new_env_group_one_est_gap_multi_budget.ipynb
+++ b/Q_BAI/Q_UGapEb_20arms-new_env_group_one_est_gap_multi_budget.ipynb
@@ -97,7 +97,7 @@
     "def run_exper(rewards_env, hyperpara_list, num_arms, num_exper, budget_or_confi, epsilon, m, tau, policy, summary_stats, est_L_flag = True, fixed_samples_list = None, est_H_flag = False):\n",
     "    for key in rewards_env.keys():\n",
     "        for hyperpara in hyperpara_list:\n",
-    "            name = key + '_' + str(num_exper) + str(budget_or_confi) \n",
+    "            name = key + '_' + str(num_exper) + '_'+ str(budget_or_confi) \n",
     "            policy_name = str(policy).split('.')[-1].split('\\'')[0] + '-'\n",
     "            subname = policy_name + str(hyperpara) \n",
     "            if est_H_flag:\n",
@@ -144,31 +144,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mixture_AbsGau_[[0, 2, 0, 1, 1], [3.5, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1], [0, 2, 0, 1, 1]]Exp_[[0.25], [0.25], [0.25], [0.25]]_100500Q_UGapEb-[1, 1]\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3bd2fcc92064215a51c04a836ae1add",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntProgress(value=0, description='Running')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for budget in [500, 1000, 1500, 2000]:\n",
+    "# [500, 1000, 1500, 2000, 2500, 3000]\n",
+    "for budget in [2500]:\n",
     "    \n",
     "    hyperpara_list = [[1,1], [4, 1]]\n",
     "\n",
@@ -196,7 +175,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "#with open('Fixed_budget_20arms_new_env_group_one_est_gap.pickle', 'wb') as handle:\n",
+    "#with open('Fixed_budget_20arms_new_env_group_one_est_gap_with_multiple_budget.pickle', 'wb') as handle:\n",
     "#    pickle.dump(results, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "#with open('Fixed_budget_20arms_new_env_group_one.pickle', 'rb') as handle:\n",
     "#     results = pickle.load(handle)\n"
