--- a/QuantEst/sgd_est_experiment/Experiment_SGD_frugal.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_SGD_frugal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,12 +119,12 @@
     "for i in range(N_frugal):\n",
     "    frugal_res[i], frugal_proc[i] = get_q_ests(dataset, tau_vals, \"Frugal\", None)\n",
     "q_est_res, q_est_proc = frugal_res, frugal_proc\n",
-    "E = get_normalized_e(q_true, sgd_est_res, q_est_res)\n"
+    "E = get_normalized_e(q_true, sgd_est_res, q_est_res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,8 @@
       "Experiment_results/Frugal_SGD/distro/gau_1_q_batches.txt\n",
       "Experiment_results/Frugal_SGD/distro/gau_1_q_est_res.txt\n",
       "Experiment_results/Frugal_SGD/distro/gau_1_q_est_proc.txt\n",
-      "Experiment_results/Frugal_SGD/distro/gau_1_E.txt\n"
+      "Experiment_results/Frugal_SGD/distro/gau_1_E.txt\n",
+      "Experiment_results/Frugal_SGD/distro/gau_1_q_compare.txt\n"
      ]
     }
    ],
@@ -150,7 +151,8 @@
     "    'q_batches': q_batches,\n",
     "    'q_est_res': q_est_res,\n",
     "    'q_est_proc': q_est_proc,\n",
-    "    'E': E\n",
+    "    'E': E,\n",
+    "    'q_compare': sgd_res_proc,\n",
     "}\n",
     "    \n",
     "save_data(folder_name, file_name, tau_vals, data_dict, \"Frugal\")"
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
